# anml-registration

./: .gitignore  Cargo.toml  Makefile  README.md
node/: .env.example  README.md  diagnose.js  examples.js  index.js  package-lock.json  package.json
node/scripts/: deploy.js  operations.js  query.js
node/utils/: client.js
src/: contract.rs  governance.rs  instantiate.rs  lib.rs  migrate.rs  msg.rs  provide.rs  query.rs  staking.rs  state.rs  swap.rs
src/execute/: allocation.rs  claim_anml.rs  mod.rs  receive.rs  registration.rs  update_config.rs
src/state/: allocation.rs  config.rs  mod.rs  registration.rs
